/* $Id: changelog,v 1.1295 2001-03-06 20:11:15 mike Exp $ */

 2000-03-06: Michal Necasek <michalnec@volny.cz>
    - DSOUND:   o Cleaned up for building with Watcom

 2001-03-02: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k:   o Fixed some 16-bit compiler problems.
                o Fixed 4.51 toolkit problems.

 2001-02-28: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Added support for high memory override key in odin.ini:
                  [ODINSYSTEM]
                  HIGHMEM=0
                  Turns off high memory usage in Odin. Useful for Warp 4 (>fp12)
                  systems that still use the old 16 bits TCPIP stack.
                  (temporary workaround)
                  NOTE: Turning this option off will prevent Odin from running
                        applications that must be loaded in high memory
                        (like MS Word).
    - NTDLL:    o Committed update from Jan. 25th:
                  Ported latest NtQuerySystemInformation from Wine
                  (includes fix for IE5 install)
    - include\odinwrap.h:
                o Wrappers only detect FS problems when they should correct them.
                  (fixes FS corruption in wsock32 (WSAStartup/WSACleanup))

 2001-02-27: Sander van Leeuwen <sandervl@xs4all.nl>
    - WINMM:    o Added recording (still untested)
                o waveOutReset bugfix
                o Compile fix (midi.cpp)
    - USER32:   o Ported latest wsprintf Wine functions (not much changed; only
                  to stay in sync)

 2001-02-26: Sander van Leeuwen <sandervl@xs4all.nl>
    - WINMM:    o Fixed FS corruption in RTMidi class (wrappers for RTMIDI
                  functions)

 2001-02-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Check executable too when searching for imported modules
                  (directly imported by PE dlls)

 2001-02-24: Sander van Leeuwen <sandervl@xs4all.nl>